@@ -2,6 +2,7 @@
 v4.2.21-git
 -----------
 
+[jan] Officially support PHP 7.
 
 
 -------
